[gd_scene load_steps=8 format=3 uid="uid://bpn8qve673v7e"]

[ext_resource type="Texture2D" uid="uid://knqk46pd5ds1" path="res://Graphics/UI/ScrapBar.png" id="1_avuan"]
[ext_resource type="Script" uid="uid://bmdxbkla3goa3" path="res://Scripts/UI/ScrapBar.gd" id="1_grkmp"]
[ext_resource type="Texture2D" uid="uid://bd5rtw5x6sjmx" path="res://Graphics/UI/ScrapBarLine.png" id="2_grkmp"]
[ext_resource type="Material" uid="uid://bqmu8g5akxawm" path="res://Shaders/Flash.tres" id="3_c6pfp"]

[sub_resource type="Animation" id="Animation_6u3wa"]
resource_name = "Flash"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScrapBarContainer/ScrapBarLine:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScrapBarContainer/ScrapBarLine:material:shader_parameter/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_uho58"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScrapBarContainer/ScrapBarLine:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScrapBarContainer/ScrapBarLine:material:shader_parameter/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_attdu"]
_data = {
&"Flash": SubResource("Animation_6u3wa"),
&"RESET": SubResource("Animation_uho58")
}

[node name="ScrapBar" type="Control"]
process_priority = 1
custom_minimum_size = Vector2(72, 15)
layout_mode = 3
anchors_preset = 0
offset_top = -8.0
offset_right = 72.0
offset_bottom = 7.0
script = ExtResource("1_grkmp")

[node name="ScrapBarContainer" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(18, 14)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -7.5
offset_right = 40.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_avuan")
region_rect = Rect2(0, 0, 49, 15)
patch_margin_left = 14
patch_margin_right = 3
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ColorRect" type="ColorRect" parent="ScrapBarContainer"]
show_behind_parent = true
layout_mode = 0
offset_left = 14.0
offset_top = 5.0
offset_right = 110.0
offset_bottom = 10.0
color = Color(0.1368, 0.1368, 0.36, 0.458824)

[node name="ScrapBarLine" type="NinePatchRect" parent="ScrapBarContainer"]
show_behind_parent = true
material = ExtResource("3_c6pfp")
clip_contents = true
layout_mode = 2
offset_left = 12.0
offset_top = 5.0
offset_right = 40.0
offset_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_grkmp")
region_rect = Rect2(0, 0, 3, 5)
patch_margin_right = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_attdu")
}
